# Todo-app-phase3

./: .env.example  FINAL_COMPLETION_SUMMARY.md  FLOATING_CHATBOT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  RESTART_INSTRUCTIONS.txt  alembic.ini  backend_cors_test.py  check_detailed_schema.py  check_messages_fk.py  check_table_structure.py  cors_test.py  debug_tables.py  docker-compose.yml  fix_conversations_schema.py  fix_full_schema.py  test_api.py  test_auth_import.py  test_backend_health.py  test_backend_imports.py  test_conversation_backend.py  test_conversation_creation.py  test_conversation_fix.py  test_cors_config.py  test_cors_detailed.py  test_fix.py  test_original_scenario.py  test_register_and_signin.py  test_tasks_endpoint_v2.py  validate_implementation.py
backend/: Dockerfile  check_conversation_table.py  check_int_calls.py  check_messages_table.py  check_tables_simple.py  find_error.py  initialize_db.py  migrate_messages_table.py  pyproject.toml  requirements.txt  simple_test.py  test_better_auth.py  test_config.py  test_imports.py  test_user_exists.py  update_schema.py  update_schema_with_metadata.py  update_tasks_schema.py  verify_data_storage.py  verify_data_storage_basic.py  verify_persistence.py
backend/migrations/: env.py
backend/migrations/versions/: 001_ensure_conversations_table.py
backend/src/: auth.py  config.py  database.py  logging_config.py  main.py  security_config.py
backend/src/api/: chat_api.py  dependencies.py
backend/src/mcp/: tools.py
backend/tests/: test_basic.py
(+119 files in other folders)
